<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_input"
        style="@drawable/et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:editable="false"
        android:ems="10"
        android:gravity="right" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/btn_clear"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_del"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_del"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_divide"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_multiply"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/btn_7"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_8"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_9"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_minus"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/btn_4"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_5"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_6"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_add"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/btn_1"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/btn_2"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/btn_3"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/btn_0"
                    android:textSize="20sp" />
                
                
                   <Button
                    android:id="@+id/btn_to2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/btn_to2"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btn_point"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/btn_point"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="60dp"
            android:layout_height="130dp"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_equal"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>